--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <title>BOTER | Expresiones Regulares</title>
     <link rel="stylesheet" href="estilosHeader.css">
 </head>
-<!-- Hola qué tal, te recuerdo que la web es de uso libre -->
-<!-- usala para lo que desees y no olvides suscribirte a AlexCG Design -->
-<!-- Web hecha por AlexCG Design, si te sirvió la plantilla por favor entra a AlexCG Design -->
-<!-- ->>>> https://www.youtube.com/alexcgdesign <<<<- -->
 
 <body>
     <header>
@@ -27,7 +23,7 @@
     <footer>
         <div class="contenedor">
             <h2 class="titulo-footer">Contactanos</h2>
-            <h3 class="subtitulo-footer">Lo apreciariamos mucho su opinión</h3>
+            <h3 class="subtitulo-footer">Cualquier duda, comentario o sugerencia</h3>
             <div class="footer">
                 <form action="">
                     <input type="text" name="" id="" placeholder="Nombre">
