--- a/contenedor.html
+++ b/contenedor.html
@@ -61,7 +61,7 @@
 					<li><a onclick="document.getElementById('clicsMenu').play()" href="#button1"><span class="fas fa-book"></span><span class="tab-text">Teoría</span></a></li>
 					<li><a onclick="document.getElementById('clicsMenu').play()" href="#button2"><span class="fas fa-chalkboard"></span><span class="tab-text">Ejemplos</span></a></li>
 					<li><a onclick="document.getElementById('clicsMenu').play()" href="#button3"><span class="fas fa-edit"></span><span class="tab-text">Actividades</span></a></li>
-					<li><a onclick="document.getElementById('clicsMenu').play()" href="#button4"><span class="fas fa-clipboard"></span><span class="tab-text">Evaluación</span></a></li>
+					<li><a onclick="location.href='evaluacion.html'"><span class="fas fa-clipboard"></span><span class="tab-text">Evaluación</span></a></li>
 				</ul>
 			</article>
 
@@ -118,10 +118,7 @@
 				<h1>ACTIVIDADES</h1>
 			</article>
 
-			<!-- SECCION EVALUACION----------------------------------------- -->
-			<article id="button4">
-				<h1>EVALUACIÓN</h1>
-			</article>
+
 
 			<!-- COMIENZA SECCIONES TAB DE NAVEGACIÓN DE MENU-TEORIA-------------------------------- -->
 
