--- a/contenedor.html
+++ b/contenedor.html
@@ -61,7 +61,7 @@
 					<li><a onclick="document.getElementById('clicsMenu').play()" href="#button1"><span class="fas fa-book"></span><span class="tab-text">Teoría</span></a></li>
 					<li><a onclick="document.getElementById('clicsMenu').play()" href="#button2"><span class="fas fa-chalkboard"></span><span class="tab-text">Ejemplos</span></a></li>
 					<li><a onclick="document.getElementById('clicsMenu').play()" href="#button3"><span class="fas fa-edit"></span><span class="tab-text">Actividades</span></a></li>
-					<li><a onclick="location.href='evaluacion.html'"><span class="fas fa-clipboard"></span><span class="tab-text">Evaluación</span></a></li>
+					<li><a onclick="document.getElementById('clicsMenu').play()" href="#button4"><span class="fas fa-clipboard"></span><span class="tab-text">Evaluación</span></a></li>
 				</ul>
 			</article>
 
@@ -116,6 +116,15 @@
 			<!-- SECCION ACTIVIDADES----------------------------------------- -->
 			<article id="button3">
 				<h1>ACTIVIDADES</h1>
+			</article>
+
+			<article id="button4">
+				<h1>Evaluación</h1>
+				<p>A continuación se te proporciona una evaluación acerca de las Expresiones Regulares, donde puedes aplicar lo aprendido en este material, de tal manera que podrás conocer el dominio de ER que has obtenuido en el recorrido de esta herramienta didáctica</p>
+				<p><b>Competencia:</b> Emplea expresiones regulares para resolver problemas computacionales, considerando para ello la teoría existente.</p>
+
+				<div class="divBoton"><a href="evaluacion.html" class="boton">Comenzar</a></div>
+				
 			</article>
 
 
