Cambios de Nuevo

--- a/contenedor.html
+++ b/contenedor.html
@@ -16,7 +16,7 @@
 
 <!-- EMPIEZA EL CUERPO DE MI PAGINA--------------------------------------------------- -->
 
-<body>7
+<body>
 
 	<div class="contenedorVertical"></div>
 
