Cambios Estilos Eva

--- a/evaluacion.html
+++ b/evaluacion.html
@@ -16,7 +16,7 @@
             <div class = "title-wrapper">
                 <div class = "quiz-title">
                     <h2>Evaluación</h2>
-                    <h5>Instrucciones: Lee con atención cada ejercicio y selecciona la opción correcta en cada caso.</h5>
+                    <h5>Instrucciones: Lee con atención cada ejercicio y selecciona el número correcta en cada caso.</h5>
                 </div>
 
                 <!-- Score board -->
