--- a/contenedor.html
+++ b/contenedor.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="estilos.css">
 	<link rel="stylesheet" href="css/all.min.css">
 	<link rel="stylesheet" href="estilosModals.css">
+	 <link rel="shortcut icon" href="img/iconBOTER.png" type="image/x-icon">
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="js/scriptMostrarArticles.js"></script>
@@ -270,6 +271,25 @@
 				</ul>
 			</article>
 
+			<article id="ejemplosER">
+				<h1>Animaciones ER</h1>
+				<p>Con estos ejercicios de ejemplo a través de animaciones podrás comprender mejor lo visto en la sección de <b>Teoría</b></p>
+				<br>
+				<ul class="buttonsAnimaciones">
+					<li><a onclick="document.getElementById('clicsAnimaciones').play()" href="#" id="abrir10"><span class="fas fa-play"></span><span class="tab-text">Ejemplo 1</span></a></li>
+					<li><a onclick="document.getElementById('clicsAnimaciones').play()" href="#" id="abrir11"><span class="fas fa-play"></span><span class="tab-text">Ejemplo 2</span></a></li>
+				</ul>
+				<br>
+				<ul class="buttonsAnimaciones">
+					<li><a onclick="document.getElementById('clicsAnimaciones').play()" href="#" id="abrir12"><span class="fas fa-play"></span><span class="tab-text">Ejemplo 3</span></a></li>
+					<li><a onclick="document.getElementById('clicsAnimaciones').play()" href="#" id="abrir13"><span class="fas fa-play"></span><span class="tab-text">Ejemplo 4</span></a></li>
+				</ul>
+				<br>
+				<ul class="buttonsRegresar">
+					<li><a onclick="document.getElementById('clicsRegresar').play()" href="#button2"><span class="fas fa-undo"></span><span class="tab-text">Regresar</span></a></li>
+				</ul>
+			</article>
+
 			<!-- CONTENDEDORES DE ANIMACIONES------------------------------------------------------ -->	
 
 			<!-- INICIA SECCIONES DE ANIMACIONES DE OPERACIONES - UNION-------------------------------------- -->
@@ -436,6 +456,76 @@
 					</div>
 				</div>
 			</div>
+
+			<div id="modalEjemplo1" class="modal">
+				<div class="flex" id="flex10">
+					<div class="contenido-modal">
+						<div class="modal-header flex">
+							<h2>Animaciones ER - Ejemplo 1</h2>
+							<span class="close" id="close10">&times;</span>
+						</div>
+						<div class="modal-body">
+							<img src="img/ejemplo1.gif">		
+						</div>
+						<div class="footer">
+							<h3>Derechos Reservados &copy;</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div id="modalEjemplo2" class="modal">
+				<div class="flex" id="flex11">
+					<div class="contenido-modal">
+						<div class="modal-header flex">
+							<h2>Animaciones ER - Ejemplo 2</h2>
+							<span class="close" id="close11">&times;</span>
+						</div>
+						<div class="modal-body">
+							<img src="img/ejemplo2.gif">		
+						</div>
+						<div class="footer">
+							<h3>Derechos Reservados &copy;</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div id="modalEjemplo3" class="modal">
+				<div class="flex" id="flex12">
+					<div class="contenido-modal">
+						<div class="modal-header flex">
+							<h2>Animaciones ER - Ejemplo 3</h2>
+							<span class="close" id="close12">&times;</span>
+						</div>
+						<div class="modal-body">
+							<img src="img/ejemplo3.gif">		
+						</div>
+						<div class="footer">
+							<h3>Derechos Reservados &copy;</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div id="modalEjemplo4" class="modal">
+				<div class="flex" id="flex13">
+					<div class="contenido-modal">
+						<div class="modal-header flex">
+							<h2>Animaciones ER - Ejemplo 4</h2>
+							<span class="close" id="close13">&times;</span>
+						</div>
+						<div class="modal-body">
+							<img src="img/ejemplo4.gif">		
+						</div>
+						<div class="footer">
+							<h3>Derechos Reservados &copy;</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
 
 			<!-- INICIA SECCIONES DE EJEMPLOS-------------------------------------- -->
 
