--- a/evaluacion.html
+++ b/evaluacion.html
@@ -7,6 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="estilosEvaluacion.css">
+        <link rel="shortcut icon" href="img/iconBOTER.png" type="image/x-icon">
     </head>
     <body>
 
