--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
 </head>
 
 <body>
-    <header>
-        <div class="textos">
+    <section class="hero">
+        <div class="text">
             <br><br><br><br>
-            <h1 class="titulo">BOTER</h1>
-            <h3 class="subtitulo">Expresiones Regulares</h3>
-            <a href="contenedor.html" class="boton">Comenzar</a>
-            <br><br><br><br>
+            <h1>BOTER</h1>
+            <h2>Expresiones Regulares</h2>
+            <a href="contenedor.html" class="btn">Comenzar</a>
         </div>
-    </header>
+    </section>
 </body>
 
 </html>
