--- a/contenedor.html
+++ b/contenedor.html
@@ -124,8 +124,8 @@
 				<h1>ACTIVIDADES</h1>
 				<br>
 				<p><b>Competencia:</b> Emplea expresiones regulares para resolver problemas computacionales, considerando para ello la teoría existente.</p>
-
-				<div class="start_btn"><button>Comenzar</button></div>
+				<br>
+				<div id="buttonStart" class="start_btn"><center><button>Comenzar</button></center></div>
 
 				<!-- Info Box -->
 				<div class="info_box">
@@ -180,7 +180,7 @@
 				</div>
 
 				<!-- Result Box -->
-				<div class="result_box">
+				<div id="box" class="result_box">
 	        		<!--<div class="icon">
 	           		 <i class="fas fa-crown"></i>
 	        		</div>-->
