--- a/contenedor.html
+++ b/contenedor.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="estilos.css">
 	<link rel="stylesheet" href="css/all.min.css">
 	<link rel="stylesheet" href="estilosModals.css">
-	<link rel="stylesheet" href="estilosEvaluacionER.css">
+	<link rel="stylesheet" href="estilosActividades.css">
 	<link rel="shortcut icon" href="img/iconBOTER.png" type="image/x-icon">
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -198,6 +198,11 @@
 			<!-- SECCION EVALUACIÓN----------------------------------------- -->
 			<article id="button4">
 				<h1>Evaluación</h1>
+				<p>A continuación se te proporciona una evaluación acerca de las Expresiones Regulares, donde puedes aplicar lo aprendido en este material, de tal manera que podrás conocer el dominio de ER que has obtenido en el recorrido de esta herramienta didáctica</p>
+				
+				<p><b>Competencia:</b> Emplea expresiones regulares para resolver problemas computacionales, considerando para ello la teoría existente.</p>
+
+				<div class="divBoton"><a href="evaluacion.html" class="boton">Comenzar</a></div>
 				
 			</article>
 
