--- a/evaluacion.html
+++ b/evaluacion.html
@@ -83,9 +83,8 @@
 
         <section class = "exit-section">
             <div class = "exit-btn">
-                <h2 id = "exit" class = "btn-hover-effect">Reiniciar</h2>
-                <br>
-                <a href="contenedor.html" class="botonSalir">Salir</a>
+                <h2 id = "exit" class = "btn-hover-effect" style="display: inline;" >Reiniciar</h2>
+                <a href="contenedor.html" class="botonSalir" ><b>Salir</b></a>
             </div>
         </section>
 
